Align format in deck list. Fix reagent warning.

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -1131,9 +1131,6 @@ nav ul
         line-height: 18px
         flex(1)
 
-.deck-status.shift-tooltip
-    padding-right: 12px
-
 .deck-status, .user-status
   position: relative
 
